[gd_scene load_steps=3 format=3 uid="uid://rp23wc6u6n5x"]

[ext_resource type="Script" path="res://scenes/ui/movie_category_menu/movie_record_item/movie_record_item.gd" id="1_co1fs"]
[ext_resource type="Texture2D" uid="uid://bf46kaeffbknr" path="res://icon.svg" id="2_47umu"]

[node name="MovieRecordItem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_co1fs")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MovieName" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 60
text = "Название"
horizontal_alignment = 1

[node name="MovieRating" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_47umu")
stretch_mode = 5
